remove dependency on `sun.reflect.MagicAccessorImpl`